{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 369,
  "lineage": "eca6cef0-e411-d6c5-58ee-2245ee3a9f12",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "acqa-test-eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.0.50",
            "association_id": "eipassoc-005cfe3738da19d08",
            "domain": "vpc",
            "id": "eipalloc-00d9fad2e1d0a3c9e",
            "instance": "i-0ab565ec00719d99e",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-0986c1d760cfa96ec",
            "private_dns": "ip-10-0-0-50.ca-central-1.compute.internal",
            "private_ip": "10.0.0.50",
            "public_dns": "ec2-3-97-56-30.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.97.56.30",
            "public_ipv4_pool": "amazon",
            "tags": {
              "ACQAResource": "true",
              "Name": "acqa-test-eip1",
              "Owner": "AC-QA"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_network_interface.acqa-test-networkinterface1",
            "aws_security_group.acqa-test-securitygroup1",
            "aws_subnet.acqa-test-subnet1",
            "aws_vpc.acqa-test-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "acqa-test-instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a20346326d3d1853",
            "arn": "arn:aws:ec2:ca-central-1:641885301384:instance/i-0ab565ec00719d99e",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ab565ec00719d99e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0986c1d760cfa96ec"
              }
            ],
            "primary_network_interface_id": "eni-0986c1d760cfa96ec",
            "private_dns": "ip-10-0-0-50.ca-central-1.compute.internal",
            "private_ip": "10.0.0.50",
            "public_ip": "3.97.56.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03a4647c173885fd3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090cd5c2681d64be8",
            "tags": {
              "ACQAResource": "true",
              "Name": "acqa-test-instance1",
              "Owner": "AC-QA"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07a5cbd17c240d06d"
            ]
          },
          "dependencies": [
            "aws_network_interface.acqa-test-networkinterface1",
            "aws_security_group.acqa-test-securitygroup1",
            "aws_subnet.acqa-test-subnet1",
            "aws_vpc.acqa-test-vpc1",
            "data.aws_ami.acqa-test-instance1-ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "acqa-test-gateway1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:641885301384:internet-gateway/igw-05946b73a76c038cb",
            "id": "igw-05946b73a76c038cb",
            "owner_id": "641885301384",
            "tags": {
              "ACQAResource": "true",
              "Name": "acqa-test-gateway1",
              "Owner": "AC-QA"
            },
            "vpc_id": "vpc-050686ece794dd50b"
          },
          "dependencies": [
            "aws_vpc.acqa-test-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "acqa-test-alb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:641885301384:loadbalancer/app/acqa-test-alb1/58897943597deb45",
            "arn_suffix": "app/acqa-test-alb1/58897943597deb45",
            "dns_name": "acqa-test-alb1-474038219.ca-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ca-central-1:641885301384:loadbalancer/app/acqa-test-alb1/58897943597deb45",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "acqa-test-alb1",
            "security_groups": [
              "sg-07a5cbd17c240d06d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01daa2ca4691815de"
              },
              {
                "subnet_id": "subnet-0ce523eecbb7f8469"
              }
            ],
            "subnets": [
              "subnet-01daa2ca4691815de",
              "subnet-0ce523eecbb7f8469"
            ],
            "tags": {
              "ACQAResource": "true",
              "Name": "acqa-test-alb1",
              "Owner": "AC-QA"
            },
            "vpc_id": "vpc-050686ece794dd50b",
            "zone_id": "ZQSVJUPU6J1EY"
          },
          "dependencies": [
            "aws_security_group.acqa-test-securitygroup1",
            "aws_subnet.acqa-test-albsubnet1",
            "aws_subnet.acqa-test-albsubnet2",
            "aws_vpc.acqa-test-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acqa-test-nacl1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:641885301384:network-acl/acl-09ecdd28a3c331ef3",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.3.0.0/18",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 443
              }
            ],
            "id": "acl-09ecdd28a3c331ef3",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.3.0.0/18",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "641885301384",
            "subnet_ids": [],
            "tags": {
              "ACQAResource": "true",
              "Name": "acqa-test-nacl1",
              "Owner": "AC-QA"
            },
            "vpc_id": "vpc-050686ece794dd50b"
          },
          "dependencies": [
            "aws_vpc.acqa-test-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "acqa-test-networkinterface1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0c93cfd0334f24705",
                "device_index": 0,
                "instance": "i-0ab565ec00719d99e"
              }
            ],
            "id": "eni-0986c1d760cfa96ec",
            "ipv6_address_count": 0,
            "mac_address": "06:0f:2f:31:14:1c",
            "private_ip": "10.0.0.50",
            "private_ips": [
              "10.0.0.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-07a5cbd17c240d06d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090cd5c2681d64be8",
            "tags": {
              "ACQAResource": "true",
              "Name": "acqa-test-networkinterface1",
              "Owner": "AC-QA"
            }
          },
          "dependencies": [
            "aws_security_group.acqa-test-securitygroup1",
            "aws_subnet.acqa-test-subnet1",
            "aws_vpc.acqa-test-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "acqa-test-routetable1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-042da927edbe1397a",
            "owner_id": "641885301384",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05946b73a76c038cb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ACQAResource": "true",
              "Name": "acqa-test-routetable1",
              "Owner": "AC-QA"
            },
            "vpc_id": "vpc-050686ece794dd50b"
          },
          "dependencies": [
            "aws_internet_gateway.acqa-test-gateway1",
            "aws_vpc.acqa-test-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acqa-test-securitygroup1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:641885301384:security-group/sg-07a5cbd17c240d06d",
            "description": "This security group is for API test automation",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a5cbd17c240d06d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/24"
                ],
                "description": "",
                "from_port": 3333,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3333
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "acqa-test-securitygroup1",
            "name_prefix": "",
            "owner_id": "641885301384",
            "revoke_rules_on_delete": false,
            "tags": {
              "ACQAResource": "true",
              "Name": "acqa-test-securitygroup1",
              "Owner": "AC-QA"
            },
            "timeouts": null,
            "vpc_id": "vpc-050686ece794dd50b"
          },
          "dependencies": [
            "aws_vpc.acqa-test-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "acqa-test-albsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:641885301384:subnet/subnet-0ce523eecbb7f8469",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.44.0/24",
            "id": "subnet-0ce523eecbb7f8469",
            "map_public_ip_on_launch": true,
            "owner_id": "641885301384",
            "tags": {
              "ACQAResource": "true",
              "Name": "acqa-test-albsubnet1",
              "Owner": "AC-QA"
            },
            "vpc_id": "vpc-050686ece794dd50b"
          },
          "dependencies": [
            "aws_vpc.acqa-test-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "acqa-test-albsubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:641885301384:subnet/subnet-01daa2ca4691815de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1d",
            "availability_zone_id": "cac1-az4",
            "cidr_block": "10.0.38.0/24",
            "id": "subnet-01daa2ca4691815de",
            "map_public_ip_on_launch": true,
            "owner_id": "641885301384",
            "tags": {
              "ACQAResource": "true",
              "Name": "acqa-test-albsubnet2",
              "Owner": "AC-QA"
            },
            "vpc_id": "vpc-050686ece794dd50b"
          },
          "dependencies": [
            "aws_vpc.acqa-test-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "acqa-test-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:641885301384:subnet/subnet-090cd5c2681d64be8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-090cd5c2681d64be8",
            "map_public_ip_on_launch": true,
            "owner_id": "641885301384",
            "tags": {
              "ACQAResource": "true",
              "Name": "acqa-test-subnet1",
              "Owner": "AC-QA"
            },
            "vpc_id": "vpc-050686ece794dd50b"
          },
          "dependencies": [
            "aws_vpc.acqa-test-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "acqa-test-vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:641885301384:vpc/vpc-050686ece794dd50b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0410d6cb0c0182790",
            "default_route_table_id": "rtb-09d65621bf4b111db",
            "default_security_group_id": "sg-0875474fe0c5c91db",
            "dhcp_options_id": "dopt-e0237f88",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-050686ece794dd50b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09d65621bf4b111db",
            "owner_id": "641885301384",
            "tags": {
              "ACQAResource": "true",
              "Name": "acqa-test-vpc1",
              "Owner": "AC-QA"
            }
          }
        }
      ]
    }
  ]
}